# miinaharava

./: .coveragerc  .gitignore  README.md  __main__.py  app.py  cmdline.py  dev.sh  pyproject.toml
.github/workflows/: auto.yml
batch/: 100-run-beginner-bad.sh  1000-run-beginner-bad.sh
board/: board.py  static.py
bots/: __init__.py  bad.py  bot.py  dssp.py  idiot.py  simple.py
dev/: README.md  __init__.py  commands.py
doc/: DEV.md  muistilista.txt
game/: game.py
src/miinaharava/: __main__.py  app.py  cmdline.py  main.py
src/miinaharava/board/: __init__.py
src/miinaharava/bots/: __init__.py  bot.py  dssp.py  simple.py
src/miinaharava/game/: __init__.py
src/miinaharava/tests/: test_board.py  test_bot.py
src/miinaharava/tui/: ansi.py  kbd.py  static.py  tui.py
testdata/: beginner_3win.txt  dssp_win.txt  not_solved.txt
tests/: test_app.py  test_board.py
tui/: __init__.py  ansi_draw.py  autotui.py  kbd.py  static.py  tui.py
