[tool.poetry]
name = "miinaharava"
version = "0.1.0"
description = "Miinaharava ratkaisijalla"
authors = ["Aineopintojen-harjoitustyo-Algoritmit-j <github-hy-tiralabra@v.hix.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
recursive = true
source-roots = ["./"]

[tool.pylint.basic]
docstring-min-length = 0

[tool.pylint.messages]
# Jostain syystä paikallisesti b._Board__tiles privatti tietojen lukemisen
# aiheuttamaa linttausvirhettä ei voinut disabloida.
disable = "invalid-name"
