[tool.poetry]
name = "miinaharava"
version = "0.1"
description = "Miinaharava ratkaisijalla"
authors = ["Aineopintojen-harjoitustyo-Algoritmit-j <github-hy-tiralabra@v.hix.fi>"]
readme = "README.md"
packages = [ { include = "miinaharava", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.0"
pylint = "^3.0.3"

[tool.poetry.scripts]
pylint = "dev:dev_pylint"
pytest = "dev:dev_pytest"
covhtml = "dev:dev_covhtml"
covxml = "dev:dev_covxml"
covff = "dev:dev_covff"
all = "dev:dev_all"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
recursive = true
source-roots = ["src/miinaharava/"]
