[tool.poetry]
name = "miinaharava"
version = "0.2"
description = "Miinaharava ratkaisijalla"
authors = ["Aineopintojen-harjoitustyo-Algoritmit-j <github-hy-tiralabra@v.hix.fi>"]
readme = "README.md"
packages = [ { include = "miinaharava", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.0"
pylint = "^3.0.3"

[tool.poetry.scripts]
miinaharava = 'miinaharava.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
recursive = true
source-roots = ["src/miinaharava/"]
